<resources>
    <string name="app_name">Application</string>
    <string name="grs">GİRİŞ</string>
    <string name="sfr">Şifre</string>
    <string name="mail">Email</string>
    <string name="anasayfa">Anasayfa</string>
    <string name="duyuru">Duyurular</string>
    <string name="kayit_ol">KAYIT OL</string>
    <string name="ad">Ad</string>
    <string name="soyad">Soyad</string>
    <string name="tel_mail">Email giriniz</string>
    <string name="telstrng">5XX XXX XX XX</string>
    <string name="btnvrfy">Doğrulama Kodu Gönder</string>
    <string name="bzyzn">BİZE YAZIN</string>
    <string name="adin">Adınız</string>
    <string name="mailadres">E-mail Adresiniz</string>
    <string name="telib">Telefon(İsteğe Bağlı)</string>
    <string name="ileti">İletiniz</string>
    <string name="gndr">Gönder</string>
    <string name="sfrntnz">Şifrenizi mi unuttunuz?</string>
    <string name="sfrgr">Şifrenizi Giriniz</string>
    <string name="yenimailgir">Yeni Emailinizi Giriniz</string>
    <string name="maildgr">Email Değiştir</string>
    <string name="eskisfrgr">Eski Şifrenizi Giriniz</string>
    <string name="yenisfrgr">Yeni Şifrenizi Giriniz</string>
    <string name="sfrdgr">Şifreyi Değiştir</string>
    <string name="kydt">Kaydet</string>
    <string name="hidden">******</string>
    <string name="hsbsl">Hesabı Sil</string>
    <string name="mailonay">Email Onayla</string>
    <string name="telnodgr">Telefon No Değiştir</string>
    <string name="profil">Profil</string>
    <string name="arkadas">Arkadaşlar</string>
    <string name="favori">Kaydedilen içerikler</string>
    <string name="cks">ÇIKIŞ</string>
    <string name="iletisim">İLETİŞİM</string>
    <string name="tlfn">Telefon</string>
    <string name="drs">Adres</string>
    <string name="toast1">Lütfen Gerekli alanları doldurun</string>
    <string name="toast2">Mailinize şifre yenileme bağlantısı gönderildi</string>
    <string name="toast3">Bir sorun oluştu</string>
    <string name="toast4">Önce mail adresinizi giriniz</string>
    <string name="toast5">Giriş Başarısız</string>
    <string name="toast6">Geçerli bir şifre giriniz</string>
    <string name="toast7">Geçerli bir mail giriniz</string>
    <string name="toast8">Mail adresiniz mailinize gelen doğrulama linkini onayladıktan sonra değişecektir</string>
    <string name="toast9">İşlem Başarısız</string>
    <string name="toast10">Onay maili Gönderildi</string>
    <string name="toast11">Bir sorun oluştu</string>
    <string name="toast12">Telefon Kaydet</string>
    <string name="toast13">Bu işlem hesabınızı kalıcı olarak silecektir.\nEmin Misiniz?</string>
    <string name="toast14">Hesabınız Silindi</string>
    <string name="toast15">Silinirken bir hata oluştu</string>
    <string name="toast16">İptal Et</string>
    <string name="toast17">Şifre Başarı ile Değiştirildi</string>
    <string name="toast18">Eski şifreniz yanlış</string>
    <string name="toast19">Geçerli bir şifre giriniz</string>
    <string name="toast20">Kullanıcı oluşturuldu</string>
    <string name="toast21">Kullanıcı oluşturuldu. Profil oluşturulamadı</string>
    <string name="toast22">Kullanıcı oluşturulamadı</string>
    <string name="toast23">Lütfen ad soyad giriniz</string>
    <string name="toast24">Şifre en az 8 haneli olmalıdır</string>
    <string name="toast25">Doğrulama Kodunu Giriniz</string>
    <string name="toast26">Aktif kullanıcıdan çıkış yapılıyor.Yeniden deneyiniz</string>
    <string name="toast27">Geçerli bir telefon numarası giriniz</string>
    <string name="toast28">Geçerli bir doğrulama kodu giriniz</string>
    <string name="toast29">Doğrulama Tamamlandı</string>
    <string name="toast30">Doğrulama Başarısız:</string>
    <string name="toast31">Kod Başarıyla Doğrulandı</string>
    <string name="toast32">Hatalı Doğrulama Kodu!</string>
    <string name="toast33">Beklenmedik bir hata oluştu</string>
    <string name="kul_ara">Kullanıcıları Ara</string>
    <string name="toast34">Seçilen Dil: Türkçe</string>
    <string name="ara_kullanici">Kullanıcının Adı</string>
    <string name="ara">Ara</string>
    <string name="ara_istek">İstek Gönder</string>
    <string name="kbl">Kabul et</string>
    <string name="rd">Reddet</string>
    <string name="stk">İstekler</string>
    <string name="grup_kur">Grup Kur</string>
    <string name="bldrm">Bildirimler</string>
    <string name="msj">Mesajlar</string>
    <string name="skip">Atla</string>
    <string name="splash1">Paylaşımları Görün: \nArkadaşlarınızın en son paylaşımlarını ve güncellemelerini tek bir yerde görüntüleyin. Onların hayatındaki gelişmeleri kaçırmayın.</string>
    <string name="splash2">Etkinlikleri Takip Edin: \nArkadaşlarınızın düzenlediği etkinlikleri görüntüleyin ve kaçırmamak için takip edin. Onlarla birlikte keyifli zaman geçirin.</string>
    <string name="splash3">Mesajlaşma Kolaylığı: \nArkadaşlarınıza kolayca mesaj gönderin ve iletişim halinde kalın. Yeni anılarınızı paylaşın ve iletişimde kalın.</string>
    <string name="msjat">Mesaj at</string>
    <string name="shbt">Sohbetler</string>
    <string name="toast35">Fotoğraf başarıyla değiştirildi</string>
    <string name="toast36">İstek Gönderildi</string>
    <string name="bldmyk">Gösterilecek Bildirim Yok</string>
    <string name="toast37">Lütfen arama kısmını boş bırakmayınız</string>
    <string name="toast38">Database Hatası: </string>
    <string name="toast39">Mesaj giriniz</string>
    <string name="mesaj">Mesaj</string>
    <string name="msj_git">Mesaja Git</string>
    <string name="yeni_mesaj">Yeni mesajınız var</string>
    <string name="e_yok">Gösterilecek öğe yok</string>
    <string name="toast40">Verilere ulaşılamıyor. \nLütfen bağlantınızı kontrol edin!</string>
    <string name="ttl">Sohbete Başla</string>
    <string name="hitab">Siz: </string>


</resources>