<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/etmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/etstyle"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/mail"
        android:textSize="20dp"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/email_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etsifre"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/etstyle"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/sfr"
        android:textSize="20dp"
        android:textStyle="bold"
        android:inputType="numberPassword"
        android:drawableLeft="@drawable/lock_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etmail" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn"
        android:gravity="center"
        android:text="@string/grs"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/etsifre"
        app:layout_constraintStart_toStartOf="@+id/etsifre"
        app:layout_constraintTop_toBottomOf="@+id/etsifre" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn"
        android:text="@string/kayit_ol"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/etsifre"
        app:layout_constraintStart_toStartOf="@+id/etsifre"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>