<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightOrange"
    tools:context=".SfrdgrActivity">

    <EditText
        android:id="@+id/eskisfr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/etstyle"
        android:gravity="center"
        android:hint="@string/eskisfrgr"
        android:inputType="numberPassword"
        android:maxLength="8"
        app:layout_constraintEnd_toEndOf="@+id/ivsfr"
        app:layout_constraintStart_toStartOf="@+id/ivsfr"
        app:layout_constraintTop_toBottomOf="@+id/ivsfr" />

    <EditText
        android:id="@+id/yenisfr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/etstyle"
        android:gravity="center"
        android:hint="@string/yenisfrgr"
        android:inputType="numberPassword"
        android:maxLength="8"
        app:layout_constraintEnd_toEndOf="@+id/eskisfr"
        app:layout_constraintStart_toStartOf="@+id/eskisfr"
        app:layout_constraintTop_toBottomOf="@+id/eskisfr" />

    <Button
        android:id="@+id/btnsfrdgr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sfrdgr"
        android:background="@drawable/btn"
        app:layout_constraintEnd_toEndOf="@+id/yenisfr"
        app:layout_constraintStart_toStartOf="@+id/yenisfr"
        app:layout_constraintTop_toBottomOf="@+id/yenisfr" />

    <ImageView
        android:id="@+id/ivsfr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/verify_24" />


</androidx.constraintlayout.widget.ConstraintLayout>